# opendigitizer

./: .gitignore  .pre-commit-config.yaml  .restyled.yaml  .zenodo.json  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_DEVELOPMENT_GUIDELINE.md  CORE_NAMING_GUIDELINE.md  ClangBuildAnalyzer.ini  README.md  build_configuration.hpp.in  claude_wip.md  code.code-workspace  compare_captures.sh  emmake_make.sh  formatFiles.sh  formatLastCommit.sh
cmake/: CMakeRC.cmake  (+5 more)
src/acquisition/: CMakeLists.txt  daq_api.hpp
src/service/: CMakeLists.txt  README.md  build_configuration.hpp.in  main.cpp
src/service/acquisition/: CMakeLists.txt  acqExtendedWorker.hpp  acqWorker.hpp  daq_api.hpp  mdspan_support.hpp  mock_source.hpp  ndarray.hpp
src/service/acquisition/buffer/: circular_buffer.hpp  tag.h
src/service/acquisition/test/: CMakeLists.txt  acqWorker_test.cpp
src/service/blocks/: SimpleTagSource.hpp  TestSource.hpp
src/service/cmake/: CodeCoverage.cmake  Dependencies.cmake
src/service/dashboard/: CMakeLists.txt  dashboard.ddd  dashboard.grc  dashboard.yaml  dashboardWorker.hpp  defaultDashboard.dashboard  defaultDashboard.flowgraph  header.yaml
src/service/flowgraph/: CMakeLists.txt  flowgraph.grc  flowgraphWorker.hpp
src/service/gnuradio/: CMakeLists.txt  GnuRadioAcquisitionWorker.hpp  GnuRadioFlowgraphWorker.hpp  GnuRadioWorker.hpp  cli-signal-subscribe.cpp
src/service/gnuradio/blocks/: PowerEstimators.hpp
src/service/gnuradio/examples/: function_generator.grc  picoscope4000a-streaming.grc  pulsed_power_demo.grc  pulsed_power_demo2.grc  pulsed_power_mock_demo.grc  remote_demo_service.grc  signal_generator.grc  tags_generator.grc
src/service/gnuradio/test/: CMakeLists.txt  CountSource.hpp  GnuRadioWorker_demo.cpp  picoscope4000a-streaming.grc  qa_GnuRadioWorker.cpp
src/service/rest/: CMakeLists.txt  fileserverRestBackend.hpp
src/service/rest/assets/: main.css
src/ui/: .gitignore  App.hpp  CMakeLists.txt  CMakePresets.json  Dashboard.cpp  Dashboard.hpp  DashboardPage.cpp  DashboardPage.hpp  Flowgraph.cpp  Flowgraph.hpp  FlowgraphItem.cpp  FlowgraphItem.hpp  FlowgraphPage.cpp  FlowgraphPage.hpp  GraphModel.cpp  GraphModel.hpp  GridLayout.hpp  MapUtils.hpp  OAuthSession.cpp  OAuthSession.hpp  OpenDashboardPage.cpp  OpenDashboardPage.hpp  README.md  RemoteSignalSources.cpp  RemoteSignalSources.hpp  RemoteSource.hpp  Scheduler.hpp  app.cpp  app.h  app.hpp  calculator.h  common.hpp  dashboard.cpp  dashboard.h  dashboard.hpp  dashboardpage.cpp  dashboardpage.h  dashboardpage.hpp  datasink.cpp  datasink.h  (+30 more)
src/ui/.run/: opendigitizer-ui (WASM).run.xml
src/ui/app_header/: CMakeLists.txt  PopupMenu.hpp  RadialCircularMenu.hpp  fair_header.h  fair_header.hpp
src/ui/assets/sampleDashboards/: DemoDashboard.grc  DemoDashboard.yml  ExtendedDemoDashboard.grc  ExtendedDemoDashboard.yml  PicoscopeDashboard.grc  PicoscopeDashboard.yml  PropertyControlDashboard.grc  PulsedPowerDemo.grc  complex.grc  dashboard.grc  dashboard.yml  example.yml
src/ui/assets/xkcd/: LICENSE.txt
src/ui/blocks/: Arithmetic.hpp  GlobalSignalLegend.hpp  ImPlotSink.hpp  RemoteSource.hpp  SineSource.hpp  StridedWindow.hpp  TagToSample.hpp  TestSpectrumGenerator.hpp  ToolbarBlock.hpp  meta.hpp
src/ui/charts/: Chart.hpp  ChartInterface.hpp  ChartUtils.hpp  Charts.hpp  DataSinks.hpp  SignalSink.cpp  SignalSink.hpp  SignalSinkImpl.hpp  SinkRegistry.hpp  SpectrumDensity.hpp  SpectrumHelper.hpp  SpectrumPlot.hpp  SpectrumView.hpp  StreamingSinkBlock.hpp  SurfacePlot.hpp  WaterfallPlot.hpp  XYChart.hpp  YYChart.hpp
src/ui/cmake/: Dependencies.cmake
src/ui/cmake/patches/: implot-imgui-1.92.6-compatibility.patch  implot3d-dynamic-tick-label-offset.patch
src/ui/common/: AppDefinitions.hpp  Events.hpp  FramePacer.hpp  ImGuiHelperSDL.hpp  ImguiWrap.cpp  ImguiWrap.hpp  ImguiXKCD.hpp  LookAndFeel.cpp  LookAndFeel.hpp  TouchHandler.hpp
src/ui/components/: AppHeader.hpp  Block.cpp  Block.hpp  BlockNeighborsPreview.cpp  BlockNeighborsPreview.hpp  BlockNeighboursPreview.cpp  BlockNeighboursPreview.hpp  ColourManager.hpp  Dialog.hpp  Docking.cpp  Docking.hpp  ExportedPropertiesList.cpp  ExportedPropertiesList.hpp  FilterComboBoxes.hpp  GlobalSignalLegend.hpp  ImGuiNotify.hpp  InputTextCompletion.hpp  Keypad.hpp  ListBox.hpp  NewBlockSelector.cpp  NewBlockSelector.hpp  NewBlockSelectorFuzzySearch.cpp  NewBlockSelectorFuzzySearch.hpp  Notification.cpp  Notification.hpp  PopupMenu.hpp  SelectedLabelsView.hpp  SignalLegend.hpp  SignalSelector.cpp  SignalSelector.hpp  Splitter.cpp  Splitter.hpp  Toolbar.hpp  YesNoPopup.hpp
src/ui/flowgraph/: arithmetic_block.cpp  arithmetic_block.h  datasink.cpp  datasink.h  datasink.hpp  datasource.cpp  datasource.h  fftblock.cpp  fftblock.h  remotedatasource.cpp  remotedatasource.h  sumblock.cpp  sumblock.h
src/ui/test/: CMakeLists.txt  ImGuiTestApp.cpp  ImGuiTestApp.hpp  README.md  TestDashboardRunner.hpp  TestSinks.hpp  qa_Chart.cpp  qa_ChartAbstraction.cpp  qa_ColourManager.cpp  qa_FramePacer.cpp  qa_FuzzySearch.cpp  qa_GraphModel.cpp  qa_SignalSink.cpp  qa_TestSpectrumGenerator.cpp  qa_appheader.cpp  qa_block.cpp  qa_blockneighborspreview.cpp  qa_blockneighbourspreview.cpp  qa_chart.cpp  qa_chart_compatibility.cpp  qa_chart_fgdipole.cpp  qa_dashboardpage.cpp  qa_dialog.cpp  qa_docking.cpp  qa_filtercomboboxes.cpp  qa_flowgraph.cpp  qa_imgui.cpp  qa_keypad.cpp  qa_layout.cpp  qa_listbox.cpp  qa_notify.cpp  qa_play_stop_bar.cpp  qa_popup_menu.cpp  qa_selectedlabelsview.cpp  qa_signalselector.cpp  qa_splitter.cpp  qa_toolbar.cpp
src/ui/utils/: CMakeLists.txt  EmscriptenHelper.hpp  ImGuiDockSpaceState.cpp  ImGuiDockSpaceState.hpp  ShaderHelper.hpp  TouchHandler.hpp  TransparentStringHash.hpp  Yaml.hpp
src/utils/: CMakeLists.txt
src/utils/include/: PeriodicTimer.hpp  Xoshiro256pp.hpp  c_resource.hpp  conversion.hpp  scope_exit.hpp  settings.h  settings.hpp  tolower.hpp
src/utils/test/: CMakeLists.txt  qa_DeviceNameHelper.cpp  qa_PeriodicTimer.cpp  qa_Xoshiro256pp.cpp  qa_c_wrapper.cpp
src/utils/version/: version.cpp.in
(+53 files in other folders)
